	                              TODO: re-generate tclconfig/configure!
	                              (I don't have autoconf-2.59, could someone do that?)

2008-12-19  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tclInt.decls CONSTify TclGetLoadedPackages second param
	* generic/tclLoad.c
	* generic/tclIntDecls.h (regenerated)

2008-12-19  Don Porter	<dgp@users.sourceforge.net>

	* unix/Makefile.in:	Update `make dist` target to include the files
	from the compat/zlib directory as well as all the bundled packages
	found under the pkgs directory, according to their individual
	`make dist` targets.  Change includes breaking a `configure-packages`
	target out of the `packages` target.

	* README:		Bump version number to 8.6b1
	* generic/tcl.h:
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2008-12-19  Kevin Kenny  <kennykb@acm.org>

	* generic/tclExecute.c:	Fix compile warnings when --enable-symbols=all.

	* win/configure.in:
	* win/Makefile.in: Added build of packages in the 'pkgs/' directory.
	* win/configure: Autoconf 2.59
	
2008-12-19  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Added build of compat/zlib

2008-12-18  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (Tcl_CloseEx,CloseWrite,CloseChannelPart,ChanCloseHalf):
	Rewrite the half-close to properly flush the channel, like is done
	for a full close, going through FlushChannel, and using the flag
	BG_FLUSH_SCHEDULED (async flush during close). New functions
	CloseWrite, CloseChannelPart, new flag CHANNEL_CLOSEDWRITE.

	* tests/chanio.test (chanio-28.[67]): Reactivated these
	tests. Replaced tclsh -> [interpreter] to get correct executable
	for the pipe process, and added after cancel to kill the fail
	timers when we are done. Removed the explicits calls to [flush],
	now that [close] handles this correctly.

2008-12-18  Don Porter	<dgp@users.sourceforge.net>
